--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -26,17 +26,13 @@ main {
   }
 
   &__header {
-    margin-top: max(105vw, 336px); // limit margin <=320px
+    margin-bottom: 6rem;
     grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
-    grid-row: 1;
+    grid-row: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: $pds-spacing-fluid-large;
-
-    @include pds-media-query-min('xs') {
-      margin-top: min(40vw, 1024px); // limit margin >=2560px
-    }
 
     .steps {
       display: flex;
@@ -79,9 +75,9 @@ main {
 
 .reserve {
   @include pds-grid;
+  margin-top: -$pds-spacing-static-large;
   grid-column: 1 / -1;
   row-gap: $pds-spacing-static-medium;
-  margin-top: -$pds-spacing-static-x-large;
 
   &__container {
     background-color: $pds-theme-light-background-base;
@@ -90,60 +86,143 @@ main {
     border-radius: $pds-border-radius-large;
     box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.24);
     display: grid;
-    grid-auto-flow: column;
-    grid-column-gap: $pds-spacing-static-large;
+    grid-template-columns: 1fr;
+    grid-gap: $pds-spacing-static-small;
   }
-  &__heading {
-    grid-column: span 2;
+
+  @include pds-media-query-max('l') {
+    &__heading {
+      margin-bottom: $pds-spacing-static-medium;
+    }
   }
-  &__form {
-    grid-column: span 8;
-    form {
+}
+
+.reserve .mobile {
+  @include pds-media-query-min('s') {
+    display: none !important;
+  }
+
+  .modal {
+    display: flex;
+    flex-direction: column;
+    gap: $pds-spacing-static-large;
+
+    &__inputs {
       display: flex;
+      flex-direction: column;
       gap: $pds-spacing-static-small;
-      p-text-field-wrapper:first-child {
-        flex: 1;
+      @include pds-media-query-min('xs') {
+        flex-direction: row;
+        p-text-field-wrapper {
+          flex: 1;
+        }
+      }
+    }
+    p-button-pure {
+      padding: $pds-spacing-static-small;
+    }
+  }
+}
+
+.reserve .desktop {
+  position: relative;
+  @include pds-media-query-max('s') {
+    display: none !important;
+  }
+
+  .dropdown {
+    display: none;
+  }
+
+  .reserve__container:focus-within + .dropdown {
+      display: grid;
+  }
+
+  .reserve__form {
+    grid-template-columns: 1fr 1fr;
+    @include pds-media-query-max('l') {
+      .reserve__heading, p-button {
+        grid-column: 1 / -1;
+      }
+      p-text-field-wrapper {
+        grid-column: span 1;
+        display: block;
+      }
+    }
+    @include pds-media-query-min('l') {
+      grid-template-columns: auto 3fr 2fr min-content;
+      grid-auto-flow: column;
+      .reserve__heading {
+        margin-inline-end: $pds-spacing-static-medium;
       }
     }
   }
-  &__results {
-    grid-column: span 4;
-    display: flex;
-    flex-direction: column;
-    gap: $pds-spacing-static-medium;
-    aspect-ratio: 4 / 5;
-    overflow: scroll;
-    justify-self: end;
-  }
-  &__img {
-    grid-column: span 4;
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-    aspect-ratio: 4 / 5;
-    border-radius: $pds-border-radius-large;
-    overflow: hidden;
-    padding: $pds-spacing-static-large;
-    box-sizing: border-box;
-    justify-self: end;
-    &::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      z-index: 1;
-      background: linear-gradient(180deg, rgba(26, 27, 29, 0) 0%, rgba(26, 27, 29, 0.0086472) 6.67%, rgba(26, 27, 29, 0.03551) 13.33%, rgba(26, 27, 29, 0.0816599) 20%, rgba(26, 27, 29, 0.147411) 26.67%, rgba(26, 27, 29, 0.231775) 33.33%, rgba(26, 27, 29, 0.331884) 40%, rgba(26, 27, 29, 0.442691) 46.67%, rgba(26, 27, 29, 0.557309) 53.33%, rgba(26, 27, 29, 0.668116) 60%, rgba(26, 27, 29, 0.768225) 66.67%, rgba(26, 27, 29, 0.852589) 73.33%, rgba(26, 27, 29, 0.91834) 80%, rgba(26, 27, 29, 0.96449) 86.67%, rgba(26, 27, 29, 0.991353) 93.33%, #1A1B1D 100%);
+
+  .dropdown {
+    position: absolute;
+    z-index: 1;
+    top: calc(100% + $pds-spacing-static-medium);
+    grid-template-columns: 1fr 1fr;
+
+    @include pds-media-query-min('l') {
+      grid-template-columns: auto 1fr 1fr;
+      .dropdown__heading {
+        display: block;
+        margin-inline-end: $pds-spacing-static-medium;
+      }
     }
-    img {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+
+    &__heading {
+      display: none;
     }
-    p-text {
+    &__results {
+      .scroll-container {
+        overflow-y: scroll;
+        display: flex;
+        flex-direction: column;
+        gap: $pds-spacing-static-medium;
+        aspect-ratio: 4 / 5;
+      }
       position: relative;
-      z-index: 2;
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 10%;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
+      }
+    }
+    &__img {
+      aspect-ratio: 4 / 5;
+      width: 100%;
+      height: auto;
+      position: relative;
+      display: flex;
+      justify-content: flex-end;
+      flex-direction: column;
+      border-radius: $pds-border-radius-large;
+      overflow: hidden;
+      padding: $pds-spacing-static-large;
+      box-sizing: border-box;
+      &::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        z-index: 1;
+        background: linear-gradient(180deg, rgba(26, 27, 29, 0) 0%, rgba(26, 27, 29, 0.0086472) 6.67%, rgba(26, 27, 29, 0.03551) 13.33%, rgba(26, 27, 29, 0.0816599) 20%, rgba(26, 27, 29, 0.147411) 26.67%, rgba(26, 27, 29, 0.231775) 33.33%, rgba(26, 27, 29, 0.331884) 40%, rgba(26, 27, 29, 0.442691) 46.67%, rgba(26, 27, 29, 0.557309) 53.33%, rgba(26, 27, 29, 0.668116) 60%, rgba(26, 27, 29, 0.768225) 66.67%, rgba(26, 27, 29, 0.852589) 73.33%, rgba(26, 27, 29, 0.91834) 80%, rgba(26, 27, 29, 0.96449) 86.67%, rgba(26, 27, 29, 0.991353) 93.33%, #1A1B1D 100%);
+      }
+      img {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      p-text {
+        position: relative;
+        z-index: 2;
+      }
     }
   }
 }
