feat: make reserve form sticky & add result hover

--- a/patterns/global.scss
+++ b/patterns/global.scss
@@ -21,7 +21,7 @@
   margin-top: $pds-spacing-fluid-x-large;
 }
 .-p-mt-xxl-fluid {
-  margin-top: $pds-spacing-fluid-xx-large;
+  margin-top: $pds-spacing-fluid-xx-large !important;
 }
 
 // static spacings
