--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -1,17 +1,8 @@
 @use '@porsche-design-system/components-js/styles' as *;
-
-.bg-surface {
-  background-color: $pds-theme-light-background-surface;
-}
+@use '../global' as *;
 
 * {
   box-sizing: border-box;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-  gap: $pds-spacing-fluid-xx-large;
 }
 
 .hero {
@@ -25,7 +16,8 @@ main {
     img {
       display: block;
       width: 100%;
-      height: auto;
+      height: 95vh;
+      object-fit: cover;
     }
   }
 
@@ -82,155 +74,150 @@ main {
   margin-top: -$pds-spacing-static-large;
   grid-column: 1 / -1;
   row-gap: $pds-spacing-static-medium;
-
-  &__container {
-    background-color: $pds-theme-light-background-base;
-    grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
-    padding: $pds-spacing-static-large;
-    border-radius: $pds-border-radius-large;
-    box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.24);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: $pds-spacing-static-small;
-  }
-
-  @include pds-media-query-max('l') {
-    &__heading {
-      margin-bottom: $pds-spacing-static-medium;
+  &.mobile {
+    @include pds-media-query-min('s') {
+      display: none !important;
     }
-  }
-}
-
-.reserve.mobile {
-  @include pds-media-query-min('s') {
-    display: none !important;
-  }
-
-  .modal {
-    display: flex;
-    flex-direction: column;
-    gap: $pds-spacing-static-large;
-
-    &__inputs {
+    .reserve-box {
+      grid-template-columns: 1fr;
+      &__heading {
+        margin-bottom: $pds-spacing-static-medium;
+      }
+    }
+    .modal {
       display: flex;
       flex-direction: column;
-      gap: $pds-spacing-static-small;
-      @include pds-media-query-min('xs') {
-        flex-direction: row;
+      gap: $pds-spacing-static-large;
+
+      &__inputs {
+        display: flex;
+        flex-direction: column;
+        gap: $pds-spacing-static-small;
+        @include pds-media-query-min('xs') {
+          flex-direction: row;
+          p-text-field-wrapper {
+            flex: 1;
+          }
+        }
+      }
+      p-button-pure {
+        padding: $pds-spacing-static-small;
+        width: 100%;
+      }
+    }
+  }
+  &.desktop {
+    @include pds-media-query-max('s') {
+      display: none !important;
+    }
+    position: sticky;
+    top: $pds-spacing-static-medium;
+    z-index: 9;
+    .reserve-box {
+      grid-template-columns: 1fr 1fr;
+      &:focus-within + .dropdown {
+        display: grid;
+      }
+      @include pds-media-query-max('l') {
+        &__heading {
+          margin-bottom: $pds-spacing-static-medium;
+        }
+        &__heading, p-button {
+          grid-column: 1 / -1;
+        }
         p-text-field-wrapper {
-          flex: 1;
+          grid-column: span 1;
+          display: block;
+        }
+      }
+      @include pds-media-query-min('l') {
+        grid-template-columns: auto 3fr 2fr min-content;
+        grid-auto-flow: column;
+        &__heading {
+          margin-inline-end: $pds-spacing-static-medium;
         }
       }
     }
-    p-button-pure {
-      padding: $pds-spacing-static-small;
+    .dropdown {
+      display: none;
+      position: absolute;
+      z-index: 1;
+      top: calc(100% + $pds-spacing-static-medium);
+      grid-template-columns: 1fr 1fr;
       width: 100%;
+
+      @include pds-media-query-min('l') {
+        grid-template-columns: auto 1fr 1fr;
+        .dropdown__heading {
+          display: block;
+          margin-inline-end: $pds-spacing-static-medium;
+        }
+      }
+
+      &__heading {
+        display: none;
+      }
+      &__results {
+        .scroll-container {
+          overflow-y: scroll;
+          display: flex;
+          flex-direction: column;
+          gap: $pds-spacing-static-medium;
+          aspect-ratio: 4 / 5;
+          padding: $pds-spacing-static-small $pds-spacing-static-small $pds-spacing-static-large;
+        }
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: $pds-spacing-static-large;
+          background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
+        }
+      }
+      &__img {
+        aspect-ratio: 4 / 5;
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+        border-radius: $pds-border-radius-large;
+        overflow: hidden;
+        padding: $pds-spacing-static-large;
+        &::before {
+          content: "";
+          position: absolute;
+          inset: 0;
+          z-index: 1;
+          background: linear-gradient(180deg, rgba(26, 27, 29, 0) 0%, rgba(26, 27, 29, 0.0086472) 6.67%, rgba(26, 27, 29, 0.03551) 13.33%, rgba(26, 27, 29, 0.0816599) 20%, rgba(26, 27, 29, 0.147411) 26.67%, rgba(26, 27, 29, 0.231775) 33.33%, rgba(26, 27, 29, 0.331884) 40%, rgba(26, 27, 29, 0.442691) 46.67%, rgba(26, 27, 29, 0.557309) 53.33%, rgba(26, 27, 29, 0.668116) 60%, rgba(26, 27, 29, 0.768225) 66.67%, rgba(26, 27, 29, 0.852589) 73.33%, rgba(26, 27, 29, 0.91834) 80%, rgba(26, 27, 29, 0.96449) 86.67%, rgba(26, 27, 29, 0.991353) 93.33%, #1A1B1D 100%);
+        }
+        img {
+          position: absolute;
+          inset: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        p-text {
+          position: relative;
+          z-index: 2;
+        }
+      }
     }
   }
 }
 
-.reserve.desktop {
-  position: relative;
-  @include pds-media-query-max('s') {
-    display: none !important;
-  }
-
-  .dropdown {
-    display: none;
-  }
-
-  .reserve__container:focus-within + .dropdown {
-      display: grid;
-  }
-
-  .reserve__form {
-    grid-template-columns: 1fr 1fr;
-    @include pds-media-query-max('l') {
-      .reserve__heading, p-button {
-        grid-column: 1 / -1;
-      }
-      p-text-field-wrapper {
-        grid-column: span 1;
-        display: block;
-      }
-    }
-    @include pds-media-query-min('l') {
-      grid-template-columns: auto 3fr 2fr min-content;
-      grid-auto-flow: column;
-      .reserve__heading {
-        margin-inline-end: $pds-spacing-static-medium;
-      }
-    }
-  }
-
-  .dropdown {
-    position: absolute;
-    z-index: 1;
-    top: calc(100% + $pds-spacing-static-medium);
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-
-    @include pds-media-query-min('l') {
-      grid-template-columns: auto 1fr 1fr;
-      .dropdown__heading {
-        display: block;
-        margin-inline-end: $pds-spacing-static-medium;
-      }
-    }
-
-    &__heading {
-      display: none;
-    }
-    &__results {
-      .scroll-container {
-        overflow-y: scroll;
-        display: flex;
-        flex-direction: column;
-        gap: $pds-spacing-static-medium;
-        aspect-ratio: 4 / 5;
-        padding: $pds-spacing-static-small $pds-spacing-static-small $pds-spacing-static-large;
-      }
-      position: relative;
-      &::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: $pds-spacing-static-large;
-        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 100%);
-      }
-    }
-    &__img {
-      aspect-ratio: 4 / 5;
-      width: 100%;
-      height: auto;
-      position: relative;
-      display: flex;
-      justify-content: flex-end;
-      flex-direction: column;
-      border-radius: $pds-border-radius-large;
-      overflow: hidden;
-      padding: $pds-spacing-static-large;
-      &::before {
-        content: "";
-        position: absolute;
-        inset: 0;
-        z-index: 1;
-        background: linear-gradient(180deg, rgba(26, 27, 29, 0) 0%, rgba(26, 27, 29, 0.0086472) 6.67%, rgba(26, 27, 29, 0.03551) 13.33%, rgba(26, 27, 29, 0.0816599) 20%, rgba(26, 27, 29, 0.147411) 26.67%, rgba(26, 27, 29, 0.231775) 33.33%, rgba(26, 27, 29, 0.331884) 40%, rgba(26, 27, 29, 0.442691) 46.67%, rgba(26, 27, 29, 0.557309) 53.33%, rgba(26, 27, 29, 0.668116) 60%, rgba(26, 27, 29, 0.768225) 66.67%, rgba(26, 27, 29, 0.852589) 73.33%, rgba(26, 27, 29, 0.91834) 80%, rgba(26, 27, 29, 0.96449) 86.67%, rgba(26, 27, 29, 0.991353) 93.33%, #1A1B1D 100%);
-      }
-      img {
-        position: absolute;
-        inset: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      p-text {
-        position: relative;
-        z-index: 2;
-      }
-    }
-  }
+.reserve-box {
+  background-color: $pds-theme-light-background-base;
+  grid-column: $pds-grid-basic-column-start / $pds-grid-basic-column-end;
+  padding: $pds-spacing-static-large;
+  border-radius: $pds-border-radius-large;
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.24);
+  display: grid;
+  grid-gap: $pds-spacing-static-small;
 }
 
 .rent {
@@ -258,6 +245,10 @@ main {
       display: flex;
       height: 100%;
       position: relative;
+    }
+
+    p-carousel {
+      --p-gradient-color-width: 20%;
     }
 
     p-model-signature {
@@ -289,6 +280,7 @@ main {
 
 .benefits {
   @include pds-grid;
+  background-color: $pds-theme-light-background-surface;
 
   #benefits {
     padding: $pds-spacing-fluid-xx-large 0 $pds-spacing-fluid-x-large 0;
@@ -357,6 +349,7 @@ main {
 }
 
 .drive-steps {
+  background-color: $pds-theme-light-background-surface;
   padding: $pds-spacing-fluid-xx-large 0;
 
   &__container {
