feat: add model signature animation

--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -273,7 +273,12 @@
       left: 0;
       right: 0;
       margin-inline: auto;
+      animation: modelSignatureFadeInUp $pds-motion-duration-long $pds-motion-easing-out forwards;
+      opacity: 0;
       transform: translateY(-50%);
+      &.show {
+        display: block;
+      }
     }
 
     img {
@@ -432,5 +437,16 @@
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes modelSignatureFadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(-50%);
   }
 }
