feat: re-work admin panel template | sas

--- a/patterns/admin-panel/style.scss
+++ b/patterns/admin-panel/style.scss
@@ -1,5 +1,13 @@
 @use '@porsche-design-system/components-js/styles' as *;
 
+// global style reset
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -8,29 +16,133 @@ p-divider {
   margin-block: $pds-spacing-fluid-small;
 }
 
-p-accordion p-link-pure {
+// pds component customization
+
+p-flyout#search {
+  --p-flyout-max-width: 480px;
+}
+
+// global utility classes
+
+.-mt-static-x-small {
+  margin-top: $pds-spacing-static-x-small;
+}
+.-mt-static-small {
+  margin-top: $pds-spacing-static-small;
+}
+.-mt-static-medium {
+  margin-top: $pds-spacing-static-medium;
+}
+.-mt-static-large {
+  margin-top: $pds-spacing-static-large;
+}
+.-mt-static-x-large {
+  margin-top: $pds-spacing-static-x-large;
+}
+.-mt-static-xx-large {
+  margin-top: $pds-spacing-static-xx-large;
+}
+
+.-mt-fluid-x-small {
   margin-top: $pds-spacing-fluid-x-small;
 }
+.-mt-fluid-small {
+  margin-top: $pds-spacing-fluid-small;
+}
+.-mt-fluid-medium {
+  margin-top: $pds-spacing-fluid-medium;
+}
+.-mt-fluid-large {
+  margin-top: $pds-spacing-fluid-large;
+}
+.-mt-fluid-x-large {
+  margin-top: $pds-spacing-fluid-x-large;
+}
+.-mt-fluid-xx-large {
+  margin-top: $pds-spacing-fluid-xx-large;
+}
 
-.button-group {
+.-grid {
+  display: grid;
+}
+
+.-flex {
   display: flex;
+}
+
+.-flex-col {
+  flex-direction: column;
+}
+
+.-flex-row {
+  flex-direction: row;
+}
+
+.-col-span-full-1 {
+  grid-column: 1 / -1;
+}
+
+.-items-center {
+  align-items: center;
+}
+
+.-gap-static-x-small {
+  gap: $pds-spacing-static-x-small;
+}
+.-gap-static-small {
+  gap: $pds-spacing-static-small;
+}
+.-gap-static-medium {
   gap: $pds-spacing-static-medium;
 }
-
-.list {
-  grid-column: var(--p-canvas-grid-span-full);
+.-gap-static-large {
+  gap: $pds-spacing-static-large;
+}
+.-gap-static-x-large {
+  gap: $pds-spacing-static-x-large;
+}
+.-gap-static-xx-large {
+  gap: $pds-spacing-static-xx-large;
 }
 
-.list__anchors {
-  margin-top: $pds-spacing-fluid-medium;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
+.-gap-fluid-x-small {
   gap: $pds-spacing-fluid-x-small;
 }
+.-gap-fluid-small {
+  gap: $pds-spacing-fluid-small;
+}
+.-gap-fluid-medium {
+  gap: $pds-spacing-fluid-medium;
+}
+.-gap-fluid-large {
+  gap: $pds-spacing-fluid-large;
+}
+.-gap-fluid-x-large {
+  gap: $pds-spacing-fluid-x-large;
+}
+.-gap-fluid-xx-large {
+  gap: $pds-spacing-fluid-xx-large;
+}
 
-@media (min-width: 760px) {
-  .list {
-    grid-column: var(--p-canvas-grid-span-one-third);
+// modules
+
+.list {
+  display: grid;
+  gap: $pds-spacing-fluid-large $pds-spacing-fluid-medium;
+
+  @container (min-width: #{$pds-breakpoint-s}px) {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  &__item {
+    display: grid;
+    gap: $pds-spacing-fluid-small;
+  }
+
+  &__anchors {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: $pds-spacing-fluid-x-small;
   }
 }
