--- a/patterns/drive-voucher/style.scss
+++ b/patterns/drive-voucher/style.scss
@@ -114,6 +114,7 @@
         border-radius: $pds-border-radius-medium;
         text-align: right;
         width: 100%;
+        height: $pds-font-line-height;
         color: $pds-theme-dark-primary;
         font-size: $pds-font-size-display-small;
         font-weight: $pds-font-weight-regular;
