--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -5,87 +5,113 @@
   box-sizing: border-box;
 }
 
-.hero {
-  @include pds-grid;
-  grid-row-gap: 0;
+main {
+  @include pds-grid();
+  grid-template-rows: min-content 1fr;
+  row-gap: 0;
+  & > * {
+    grid-column: 1 / -1;
+  }
+}
 
-  &__media {
-    grid-column: $pds-grid-full-column-start / $pds-grid-full-column-end;
-    grid-row: 1 / 3;
+.reserve-header-height {
+  height: 100vh;
+  grid-column: 1 / -1;
+  grid-row: 1 / 5;
+}
 
-    img {
-      display: block;
-      width: 100%;
-      height: 95vh;
-      object-fit: cover;
-      @include pds-media-query-max('s') {
-        height: 90vh;
-      }
-    }
+
+.hero-media {
+  grid-column: $pds-grid-full-column-start / $pds-grid-full-column-end;
+  grid-row: 1 / 4;
+  position: relative;
+
+  img {
+    position: absolute;
+    inset: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
   }
 
-  &__header {
-    margin-bottom: 6rem;
-    grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
-    grid-row: 2;
+  &:before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 40%;
+    background: linear-gradient(180deg, rgba(33, 34, 37, 0) 25%, #212225 100%);
+  }
+}
+
+.hero-header {
+  grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
+  grid-row: 2;
+  align-self: end;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: $pds-spacing-fluid-large;
+  z-index: 1;
+  margin-bottom: $pds-spacing-fluid-medium;
+
+  .steps {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: $pds-spacing-fluid-large;
+    gap: $pds-spacing-fluid-medium;
 
-    .steps {
-      display: flex;
-      gap: $pds-spacing-fluid-medium;
+    @include pds-media-query-max('m') {
+      display: none;
+    }
 
-      @include pds-media-query-max('m') {
-        display: none;
+    &__item {
+      animation: fadeInUp $pds-motion-duration-long $pds-motion-easing-out forwards;
+      opacity: 0;
+      transform: translateY(100px);
+      @for $i from 1 through 4 {
+        &:nth-child(#{$i}) {
+          animation-delay: ($i - 1) * 0.1s;
+        }
       }
 
-      &__item {
-        animation: fadeInUp $pds-motion-duration-long $pds-motion-easing-out forwards;
-        opacity: 0;
-        transform: translateY(100px);
-        @for $i from 1 through 4 {
-          &:nth-child(#{$i}) {
-            animation-delay: ($i - 1) * $pds-motion-duration-short;
-          }
-        }
+      display: flex;
+      align-items: center;
+      gap: $pds-spacing-static-x-small;
+      color: $pds-theme-dark-primary;
+      white-space: nowrap;
 
-        display: flex;
-        align-items: center;
-        gap: $pds-spacing-static-x-small;
-        color: $pds-theme-dark-primary;
-        white-space: nowrap;
-
-        &::before {
-          content: "";
-          display: block;
-          height: $pds-font-line-height;
-          width: $pds-font-line-height;
-          flex-shrink: 0;
-        }
-        &:nth-of-type(1)::before {
-          background-image: url("data:image/svg+xml;charset=UTF-8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\"><circle fill=\"%23FBFCFF\" stroke-width=\"1px\" cx=\"12\" cy=\"12\" r=\"9\"/><path fill=\"%23010205\" d=\"m12.33 8.67-2.43.91v-.94l2.6-1.03h.85v8.78h-1.02z\"/></svg>");
-        }
-        &:nth-of-type(2)::before {
-          background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" stroke-width="1px" cx="12" cy="12" r="9"/><path fill="%23010205" d="m9.46 15.58c0-1.35.73-2.07 1.7-2.72l.95-.63c.78-.52 1.57-1.05 1.57-2.24 0-1.12-.62-1.58-1.7-1.58s-1.68.48-1.78 1.97h-.96c.06-1.82.78-2.91 2.74-2.91s2.72.92 2.72 2.52-.92 2.23-1.79 2.8l-.95.63c-1.11.75-1.52 1.18-1.52 2.01v.16h4.17v.81h-5.15v-.81z"/></svg>')
-        }
-        &:nth-of-type(3)::before {
-          background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" stroke-width="1px" cx="12" cy="12" r="9"/><path fill="%23010205" d="m10.1 13.73c.1 1.43.63 2 1.92 2 1.2 0 1.8-.49 1.8-1.68 0-1.08-.51-1.66-1.8-1.66h-.89v-.9h.83c1.12 0 1.66-.56 1.66-1.53 0-1.08-.64-1.55-1.73-1.55s-1.69.49-1.79 1.97h-.97c.1-1.79.84-2.91 2.76-2.91s2.74.92 2.74 2.49c0 .79-.38 1.54-1.16 1.9.84.28 1.36.92 1.36 2.19 0 1.54-.97 2.49-2.81 2.49-1.96 0-2.8-.9-2.88-2.81z"/></svg>')
-        }
-        &:nth-of-type(4)::before {
-          background-image: url("data:image/svg+xml;charset=UTF-8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\"><circle fill=\"%23FBFCFF\" stroke-width=\"1px\" cx=\"12\" cy=\"12\" r=\"9\"/><path fill=\"%23010205\" d=\"m8.87 13.6 3.54-5.99h1.43v5.89h1.25v.86h-1.25v2.02h-.99v-2.02h-3.98zm3.98-.1v-4.98l-2.91 4.98z\"/></svg>");
-        }
+      &::before {
+        content: "";
+        display: block;
+        height: $pds-font-line-height;
+        width: $pds-font-line-height;
+        flex-shrink: 0;
+      }
+      &:nth-of-type(1)::before {
+        background-image: url("data:image/svg+xml;charset=UTF-8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\"><circle fill=\"%23FBFCFF\" stroke-width=\"1px\" cx=\"12\" cy=\"12\" r=\"9\"/><path fill=\"%23010205\" d=\"m12.33 8.67-2.43.91v-.94l2.6-1.03h.85v8.78h-1.02z\"/></svg>");
+      }
+      &:nth-of-type(2)::before {
+        background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" stroke-width="1px" cx="12" cy="12" r="9"/><path fill="%23010205" d="m9.46 15.58c0-1.35.73-2.07 1.7-2.72l.95-.63c.78-.52 1.57-1.05 1.57-2.24 0-1.12-.62-1.58-1.7-1.58s-1.68.48-1.78 1.97h-.96c.06-1.82.78-2.91 2.74-2.91s2.72.92 2.72 2.52-.92 2.23-1.79 2.8l-.95.63c-1.11.75-1.52 1.18-1.52 2.01v.16h4.17v.81h-5.15v-.81z"/></svg>')
+      }
+      &:nth-of-type(3)::before {
+        background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><circle fill="%23FBFCFF" stroke-width="1px" cx="12" cy="12" r="9"/><path fill="%23010205" d="m10.1 13.73c.1 1.43.63 2 1.92 2 1.2 0 1.8-.49 1.8-1.68 0-1.08-.51-1.66-1.8-1.66h-.89v-.9h.83c1.12 0 1.66-.56 1.66-1.53 0-1.08-.64-1.55-1.73-1.55s-1.69.49-1.79 1.97h-.97c.1-1.79.84-2.91 2.76-2.91s2.74.92 2.74 2.49c0 .79-.38 1.54-1.16 1.9.84.28 1.36.92 1.36 2.19 0 1.54-.97 2.49-2.81 2.49-1.96 0-2.8-.9-2.88-2.81z"/></svg>')
+      }
+      &:nth-of-type(4)::before {
+        background-image: url("data:image/svg+xml;charset=UTF-8,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 24 24\"><circle fill=\"%23FBFCFF\" stroke-width=\"1px\" cx=\"12\" cy=\"12\" r=\"9\"/><path fill=\"%23010205\" d=\"m8.87 13.6 3.54-5.99h1.43v5.89h1.25v.86h-1.25v2.02h-.99v-2.02h-3.98zm3.98-.1v-4.98l-2.91 4.98z\"/></svg>");
       }
     }
   }
 }
 
 .reserve {
+  grid-row: 3 / 5;
   @include pds-grid;
-  margin-top: -$pds-spacing-static-large;
   grid-column: 1 / -1;
   row-gap: $pds-spacing-static-medium;
+  margin-bottom: $pds-spacing-fluid-medium;
+  z-index: 9;
   &.mobile {
     @include pds-media-query-min('s') {
       display: none !important;
@@ -124,7 +150,6 @@
     }
     position: sticky;
     top: $pds-spacing-static-medium;
-    z-index: 9;
     .reserve-box {
       grid-template-columns: 1fr 1fr;
       &:focus-within + .dropdown {
@@ -253,9 +278,12 @@
   &__sideshot {
     aspect-ratio: 2 / 1;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 
     div {
+      padding-top: 35px;
       position: relative;
     }
 
@@ -265,15 +293,13 @@
 
     p-model-signature {
       display: none;
-      height: 40%;
+      height: 70px;
       width: auto;
       position: absolute;
       z-index: -1;
       left: 0;
       right: 0;
       margin-inline: auto;
-      animation: model-signature-fade-in-up $pds-motion-duration-long $pds-motion-easing-out forwards;
-      opacity: 0;
       transform: translateY(-50%);
       &.show {
         display: block;
@@ -383,11 +409,6 @@
     flex-direction: column;
     align-items: center;
     gap: $pds-spacing-static-large;
-    @for $i from 1 through 4 {
-      &:nth-child(#{$i}) {
-        animation-delay: ($i - 1) * $pds-motion-duration-short !important;
-      }
-    }
   }
 }
 
@@ -423,13 +444,7 @@
     gap: $pds-spacing-static-medium;
 
     @include pds-media-query-min('m') {
-      grid-column: span 3; // TODO: Isn't there something like --pds-grid-basic-span-one-quarter
-    }
-
-    @for $i from 1 through 4 {
-      &:nth-child(#{$i}) {
-        animation-delay: ($i - 1) * $pds-motion-duration-short !important;
-      }
+      grid-column: span 3;
     }
   }
 }
@@ -442,7 +457,7 @@
 @keyframes fade-in-up {
   0% {
     opacity: 0;
-    transform: translateY(100px);
+    transform: translateY(60px);
   }
   100% {
     opacity: 1;
@@ -452,7 +467,7 @@
 
 [data-animation="fade-in-up"] {
   opacity: 0;
-  transform: translateY(100px);
+  transform: translateY(60px);
 }
 [data-animation="fade-in-up"].animation-play {
   animation: fade-in-up $pds-motion-duration-long $pds-motion-easing-out forwards;
@@ -476,15 +491,4 @@
 [data-animation="tile-fade-in-up"].animation-play {
   animation: tile-fade-in-up $pds-motion-duration-long $pds-motion-easing-out forwards;
   animation-delay: $pds-motion-duration-short;
-}
-
-@keyframes model-signature-fade-in-up {
-  0% {
-    opacity: 0;
-    transform: translateY(50%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(-50%);
-  }
 }
