--- a/patterns/drive-homepage/style.scss
+++ b/patterns/drive-homepage/style.scss
@@ -7,7 +7,7 @@
 
 main {
   @include pds-grid();
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: 1fr;
   row-gap: 0;
   & > * {
     grid-column: 1 / -1;
@@ -17,13 +17,13 @@ main {
 .reserve-header-height {
   height: 100vh;
   grid-column: 1 / -1;
-  grid-row: 1 / 5;
+  grid-row: 1 / 4;
 }
 
 
 .hero-media {
   grid-column: $pds-grid-full-column-start / $pds-grid-full-column-end;
-  grid-row: 1 / 4;
+  grid-row: 1 / 3;
   position: relative;
 
   img {
@@ -49,7 +49,7 @@ main {
 
 .hero-header {
   grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
-  grid-row: 2;
+  grid-row: 1;
   align-self: end;
   display: flex;
   flex-direction: column;
@@ -105,7 +105,7 @@ main {
 }
 
 .reserve {
-  grid-row: 3 / 5;
+  grid-row: 2 / 4;
   @include pds-grid;
   grid-column: 1 / -1;
   row-gap: $pds-spacing-static-medium;
