--- a/patterns/drive-voucher/style.scss
+++ b/patterns/drive-voucher/style.scss
@@ -62,6 +62,11 @@
     flex-direction: column;
     gap: $pds-spacing-static-medium;
     grid-column: $pds-grid-narrow-column-start / $pds-grid-narrow-column-end;
+    &:is(ul) {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+    }
   }
 
   .box {
