--- a/src/ai-assistant-widget/style.scss
+++ b/src/ai-assistant-widget/style.scss
@@ -30,6 +30,8 @@
   --color-state-focus: #{$pds-theme-light-state-focus};
   --color-state-disabled: #{$pds-theme-light-state-disabled};
 
+  // --color-background-skeleton: #{$pds-theme-dark-background-surface} linear-gradient(to right, transparent 0%, #1a1b1e 20%, transparent 50%) 0 0 / 200% 100%;
+
   --font-porsche-next: #{$pds-font-family};
 
   --font-weight-regular: #{$pds-font-weight-regular};
@@ -81,8 +83,19 @@
   --default-transition-duration: #{$pds-motion-duration-moderate};
 
   --default-outline-width: #{$pds-border-width-base};
+
+  // --animate-skeleton: skeleton #{$pds-motion-duration-long} #{$pds-motion-easing-base} infinite;
+  // @keyframes skeleton {
+  //   from {
+  //     background-position-x: 100%;
+  //   }
+  //   to {
+  //     background-position-x: -100%;
+  //   }
+  // }
 }
 
+// BEGIN: p-widget
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -92,14 +105,14 @@
   }
 }
 
-button[popovertarget="ai-assistant"] {
+button.ai-assistant {
   background: deeppink;
   position: fixed;
   inset-inline-end: $pds-spacing-fluid-medium;
   inset-block-end: $pds-spacing-fluid-medium;
 }
 
-div[popover]#ai-assistant {
+[popover].ai-assistant {
   all: unset;
   display: block;
   position: fixed;
@@ -139,6 +152,7 @@ div[popover]#ai-assistant {
     }
   }
 }
+// END: p-widget
 
 form {
   display: grid;
@@ -174,4 +188,8 @@ form {
   font: inherit;
   margin-block: $pds-spacing-static-x-small;
   grid-area: 1/1/-1/-1;
+}
+
+.skeleton {
+  @include pds-skeleton('light');
 }
