feat: improve ai assistant widget | sas

--- a/src/ai-assistant-widget/style.scss
+++ b/src/ai-assistant-widget/style.scss
@@ -132,7 +132,7 @@
   }
 
   .ai-form {
-    @apply grid grid-cols-[auto_minmax(0,1fr)_repeat(2,auto)] gap-x-static-md gap-y-static-sm items-center p-static-xs overflow-hidden bg-background-surface rounded-md;
+    @apply grid grid-cols-[auto_minmax(0,1fr)_repeat(2,auto)] gap-x-static-md gap-y-static-sm items-center p-static-sm bg-background-surface rounded-md;
   }
 
   .ai-input {
@@ -140,7 +140,7 @@
   }
 
   .ai-upload {
-    @apply ms-static-sm p-[2px] cursor-pointer rounded-sm transition hover:bg-state-hover focus-visible:outline outline-state-focus outline-offset-[-2px];
+    @apply ms-static-xs p-[2px] cursor-pointer rounded-sm transition hover:bg-state-hover focus-visible:outline outline-state-focus outline-offset-[-2px];
   }
 
   .ai-icon {
